--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World of Deep Learning? No, still github pages!
+!docstring
+
+<head>
+	
+</head>>
+
+<body>
+	<p>
+		Hello World of Deep Learning? No, still github pages!
+	</p>
+</body>
